changes in the readme

--- a/doc/ProjectDescription.Rmd
+++ b/doc/ProjectDescription.Rmd
@@ -14,7 +14,7 @@ link-citations: true
 
 The freshwater cnidarian _Hydra_ coexists with a rich diversity of host-associated microbes. These microbes colonize external epithelial surfaces (@frauneBacteriaBacteriaInteractions2015 @deinesTransitioningMicrobiomeComposition2016), inhabit intercellular spaces (@rathjeDynamicInteractionsHostassociated2020), and in some species can even occur inside cells as endosymbionts (@frauneLongtermMaintenanceSpeciesspecific2007). The _Hydra_ microbiota has diverse effects on the host. Animals with their microbiota experimentally removed have reduced movement and contractility (@murillo-rinconSpontaneousBodyContractions2017) and impaired ability to reproduce asexually (@rahatCultivationBacteriaFreeHydra1982). Interactions between microbial components influence pattern formation (@taubenheimBacteriaTemperatureregulatedPeptides2020), and can induce tumor development (@rathjeDynamicInteractionsHostassociated2020), but the presence of core microbial elements also protects the host against fungal infections (@frauneBacteriaBacteriaInteractions2015). 
 
-_Hydra_ polyps actively shape the composition of their associated bacterial community through the secretion of antimicrobial peptides (@frauneEarlyBranchingMetazoan2010, @franzenburgDistinctAntimicrobialPeptide2013, @augustinSecretedAntibacterialNeuropeptide2017). As a result, laboratory maintained _Hydra_ species differ in the bacterial community (@franzenburgDistinctAntimicrobialPeptide2013), and show long-term association with the host, partly reflecting differences observed in their natural habitats (j@frauneLongtermMaintenanceSpeciesspecific2007). Furthermore, components of the microbiota are at least partly transmitted vertically to embryos through a process controlled by maternal antimicrobial peptides (@frauneEarlyBranchingMetazoan2010, @franzenburgBacterialColonizationHydra2013), providing an opportunity for coevolution between host physiology and microbial diversity. However, factors driving variation in the microbial composition and diversity of natural _Hydra_ populations remained so far unexplained.
+_Hydra_ polyps actively shape the composition of their associated bacterial community through the secretion of antimicrobial peptides (@frauneEarlyBranchingMetazoan2010, @franzenburgDistinctAntimicrobialPeptide2013, @augustinSecretedAntibacterialNeuropeptide2017). As a result, laboratory maintained _Hydra_ species differ in the bacterial community (@franzenburgDistinctAntimicrobialPeptide2013), and show long-term association with the host, partly reflecting differences observed in their natural habitats (@frauneLongtermMaintenanceSpeciesspecific2007). Furthermore, components of the microbiota are at least partly transmitted vertically to embryos through a process controlled by maternal antimicrobial peptides (@frauneEarlyBranchingMetazoan2010, @franzenburgBacterialColonizationHydra2013), providing an opportunity for coevolution between host physiology and microbial diversity. However, factors driving variation in the microbial composition and diversity of natural _Hydra_ populations remained so far unexplained.
 
 In a current study we aimed to understand the factors that shape bacterial diversity in natural _Hydra_ populations. To this end, we collected _Hydra_ polyps belonging to three different co-existing species (_H. oligactis_, _H. vulgaris_ and _H. circumcincta_) from 21 Central European locations. We asked whether bacterial diversity in _Hydra_ is affected by 1) sampling population ID, 2) water body type 3) nutrient load of sampling population, 4) host species, and 5) host reproductive state. In line with previous studies (e.g. @frauneLongtermMaintenanceSpeciesspecific2007) we predicted that the three _Hydra_ species will be associated with distinct microbial communities and were interested in finding out how consistent these species differences are across a range of distinct populations. Furthermore, we hypothesized that the type of habitat could influence the microbial diversity from which host-associated microbial communities are assembled and therefore recorded, for each location, whether it was standing or flowing water and categorized them in terms of nutrient load: meso-eutrophic, eutrophic or hyper-eutrophic. Finally, we hypothesized that life history stage of the host (specifically, whether it was reproducing sexually or asexually) can affect the diversity of microbial taxa associated with the host because of the altered physiology associated with sexual reproduction. In at least one of the three species (H. oligactis), sexual reproduction is associated with marked reductions in somatic maintenance functions, including loss of regeneration ability, stem cell depletion and disappearance of nematocytes (stinging cells) important for food capture (@sebestyenReproductiveModeStem2018), and these physiological changes could also affect the ability to regulate host-associated microbes. 
 
